--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.kafka.consumer.auto-offset-reset=earliest
 
 # Define the topic name (should match producer)
 app.kafka.topic=demo-topic
+# Define the stream topic name
+app.kafka.stream-topic=demo-stream-topic
 
+# Kafka Streams Application ID (must be unique per application instance group)
+spring.kafka.streams.application-id=post-stream-processor
 # Optional: Define the server port if you want to access the controller/Swagger UI
 # server.port=8081
