--- a/producer/src/main/resources/application.properties
+++ b/producer/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.kafka.producer.schema-registry-url=http://schema-registry:8081
 
 # Define the topic name
 app.kafka.topic=demo-topic
+# Define the stream topic name
+app.kafka.stream.topic=demo-stream-topic
