--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -18,6 +18,7 @@
         <springdoc-openapi.version>2.3.0</springdoc-openapi.version>
         <protobuf.version>3.25.1</protobuf.version> <!-- Added Protobuf version -->
         <protobuf-plugin.version>0.6.1</protobuf-plugin.version> <!-- Added Protobuf plugin version -->
+        <kafka-protobuf.version>7.5.1</kafka-protobuf.version>
     </properties>
     <dependencies>
         <dependency>
@@ -36,7 +37,6 @@
             <version>${springdoc-openapi.version}</version>
         </dependency>
 
-        <!-- Added Protobuf Java Dependency -->
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
@@ -46,7 +46,13 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-protobuf-serializer</artifactId>
-            <version>7.5.1</version>
+            <version>${kafka-protobuf.version}</version>
+        </dependency>
+                        
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-streams-protobuf-serde</artifactId>
+            <version>${kafka-protobuf.version}</version>
         </dependency>
 
         <dependency>
@@ -54,6 +60,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
@@ -85,6 +92,13 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.google.protobuf</groupId>
+                        <artifactId>protobuf-java</artifactId>
+                        <version>${protobuf.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
         <!-- Added OS detection extension for protobuf plugin -->
