--- a/producer/Dockerfile
+++ b/producer/Dockerfile
@@ -12,6 +12,8 @@ EXPOSE 8080
 # Environment variables
 ENV SPRING_KAFKA_PRODUCER_BOOTSTRAP_SERVERS=kafka:9092
 ENV APP_KAFKA_TOPIC=demo-topic
+ENV APP_KAFKA_STREAM_TOPIC=demo-stream-topic
+ENV SPRING_KAFKA_PRODUCER_SCHEMA_REGISTRY_URL=http://schema-registry:8081
 
 # Start the application
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
