add prometheus, grafana

--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -20,3 +20,9 @@ app.kafka.stream-topic=demo-stream-topic
 spring.kafka.streams.application-id=post-stream-processor
 # Optional: Define the server port if you want to access the controller/Swagger UI
 # server.port=8081
+# Expose Prometheus endpoint via Actuator
+
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.health.show-details=always
+# The consumer service runs on port 8080 internally (mapped to 8081 externally)
+# Actuator will use this port by default. No need to set management.server.port unless you want a different internal port.
