--- a/producer/src/main/resources/application.properties
+++ b/producer/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.kafka.producer.schema-registry-url=http://schema-registry:8081
 app.kafka.topic=demo-topic
 # Define the stream topic name
 app.kafka.stream.topic=demo-stream-topic
+
+# Expose Prometheus endpoint via Actuator
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.health.show-details=always
+# Optional: Change the management port if 8080 is already used for the main app
+# management.server.port=8088
