--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,33 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    healthcheck:
+      test: ["CMD-SHELL", "timeout 2 bash -c 'cat < /dev/null > /dev/tcp/localhost/2181'"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
   kafka:
     build: ./kafka
     container_name: kafka
     ports:
-      - "9092:9092"
+      - "9092:9092"       # Kafka broker port
+      - "7071:7071"       # JMX exporter port for Prometheus
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     environment:
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      # JMX Exporter Configuration
+      KAFKA_OPTS: "-javaagent:/opt/prometheus/jmx_prometheus_javaagent.jar=7071:/opt/prometheus/kafka-broker.yml"
     healthcheck:
-      test: /usr/bin/kafka-topics --bootstrap-server=localhost:9092 --list
+      test: ["CMD-SHELL", "echo > /dev/tcp/localhost/9092"]
       interval: 15s
       timeout: 10s
       retries: 10
@@ -30,9 +44,7 @@ services:
     container_name: producer
     ports:
       - "8080:8080"
-    #depends_on:
-    #  - kafka
-    #  - schema-registry # Added dependency
+      #  - kafka
     environment:
       SPRING_KAFKA_PRODUCER_BOOTSTRAP_SERVERS: kafka:9092
       APP_KAFKA_TOPIC: demo-topic
@@ -44,6 +56,9 @@ services:
     container_name: consumer
     ports:
       - "8081:8080" # Assuming consumer runs on 8080 internally
+    depends_on:
+      schema-registry:
+        condition: service_healthy
     #depends_on:
     #   kafka:
     #     condition: service_healthy
@@ -166,3 +181,53 @@ services:
       timeout: 10s
       retries: 5
       start_period: 60s
+
+  # Add Prometheus service
+  prometheus:
+    build: ./prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090" # Expose Prometheus UI port
+    depends_on:
+      kafka:
+        condition: service_healthy # Wait for Kafka to be healthy before scraping
+      producer:
+        condition: service_started
+      consumer:                     # Add dependency on consumer
+        condition: service_started  # Or service_healthy if consumer has a healthcheck
+    # Optional: Add volumes for Prometheus data persistence
+    # volumes:
+    #   - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    networks: # Add this section
+      - kafka-demo_default
+
+# Optional: Define volumes if used
+# volumes:
+#   prometheus_data:
+#     driver: local
+#   elasticsearch_data: # Keep existing volumes if any
+#     driver: local
+
+  grafana:
+    build:
+      context: ./grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin # Default password, change if needed
+      - GF_USERS_ALLOW_SIGN_UP=false
+    depends_on:
+      - prometheus
+    networks:
+      - kafka-demo_default
+
+# Ensure the network definition exists, for example:
+networks:
+  kafka-demo_default:
+    driver: bridge
